src/OpenCvSharp.Native/include/open_cv_sharp/imgproc.h

OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_approx_poly_dp_fill(
    const int* curve_xy,
    int point_count,
    double epsilon,
    int closed,
    int* approx_points_xy,
    int approx_point_capacity,
    int* approx_point_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_approx_poly_n_count(
    const int* curve_xy,
    int point_count,
    int nsides,
    float epsilon_percentage,
    int ensure_convex,
    int* approx_point_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_approx_poly_n_fill(
    const int* curve_xy,
    int point_count,
    int nsides,
    float epsilon_percentage,
    int ensure_convex,
    float* approx_points_xy,
    int approx_point_capacity,
    int* approx_point_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_bounding_rect(
    const int* points_xy,
    int point_count,
    int* x,
    int* y,
    int* width,
    int* height);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_is_contour_convex(
    const int* points_xy,
    int point_count,
    int* is_convex);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_convex_hull_count(
    const int* points_xy,
    int point_count,
    int clockwise,
    int* hull_point_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_convex_hull_fill(
    const int* points_xy,
    int point_count,
    int clockwise,
    int* hull_points_xy,
    int hull_point_capacity,
    int* hull_point_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_convex_hull_indices_count(
    const int* points_xy,
    int point_count,
    int clockwise,
    int* hull_index_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_convex_hull_indices_fill(
    const int* points_xy,
    int point_count,
    int clockwise,
    int* hull_indices,
    int hull_index_capacity,
    int* hull_index_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_convexity_defects_count(
    const int* contour_xy,
    int contour_point_count,
    const int* hull_indices,
    int hull_index_count,
    int* defect_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_convexity_defects_fill(
    const int* contour_xy,
    int contour_point_count,
    const int* hull_indices,
    int hull_index_count,
    int* defects,
    int defect_capacity,
    int* defect_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_min_enclosing_circle(
    const int* points_xy,
    int point_count,
    float* center_x,
    float* center_y,
    float* radius);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_point_polygon_test(
    const int* contour_xy,
    int point_count,
    float point_x,
    float point_y,
    int measure_dist,
    double* result);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_match_shapes(
    const int* contour1_xy,
    int contour1_point_count,
    const int* contour2_xy,
    int contour2_point_count,
    int method,
    double parameter,
    double* result);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_min_area_rect(
    const int* points_xy,
    int point_count,
    float* center_x,
    float* center_y,
    float* width,
    float* height,
    float* angle);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_box_points(
    float center_x,
    float center_y,
    float width,
    float height,
    float angle,
    float* points_xy,
    int point_capacity);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_fit_ellipse(
    const int* points_xy,
    int point_count,
    float* center_x,
    float* center_y,
    float* width,
    float* height,
    float* angle);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_fit_ellipse_ams(
    const int* points_xy,
    int point_count,
    float* center_x,
    float* center_y,
    float* width,
    float* height,
    float* angle);