src/OpenCvSharp/Internal/Interop/NativeMethods.DllImport.cs


        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_approx_poly_dp_fill")]
        internal static extern int ImgProcApproxPolyDPFill(
            int[] curveXy,
            int pointCount,
            double epsilon,
            int closed,
            int[] approxPointsXy,
            int approxPointCapacity,
            out int approxPointCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_approx_poly_dp_fill")]
        internal static unsafe extern int ImgProcApproxPolyDPFillPtr(
            int* curveXy,
            int pointCount,
            double epsilon,
            int closed,
            int* approxPointsXy,
            int approxPointCapacity,
            out int approxPointCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_approx_poly_n_count")]
        internal static extern int ImgProcApproxPolyNCount(
            int[] curveXy,
            int pointCount,
            int nsides,
            float epsilonPercentage,
            int ensureConvex,
            out int approxPointCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_approx_poly_n_count")]
        internal static unsafe extern int ImgProcApproxPolyNCountPtr(
            int* curveXy,
            int pointCount,
            int nsides,
            float epsilonPercentage,
            int ensureConvex,
            out int approxPointCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_approx_poly_n_fill")]
        internal static extern int ImgProcApproxPolyNFill(
            int[] curveXy,
            int pointCount,
            int nsides,
            float epsilonPercentage,
            int ensureConvex,
            float[] approxPointsXy,
            int approxPointCapacity,
            out int approxPointCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_approx_poly_n_fill")]
        internal static unsafe extern int ImgProcApproxPolyNFillPtr(
            int* curveXy,
            int pointCount,
            int nsides,
            float epsilonPercentage,
            int ensureConvex,
            float* approxPointsXy,
            int approxPointCapacity,
            out int approxPointCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_bounding_rect")]
        internal static extern int ImgProcBoundingRect(
            int[] pointsXy,
            int pointCount,
            out int x,
            out int y,
            out int width,
            out int height);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_bounding_rect")]
        internal static unsafe extern int ImgProcBoundingRectPtr(
            int* pointsXy,
            int pointCount,
            out int x,
            out int y,
            out int width,
            out int height);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_is_contour_convex")]
        internal static extern int ImgProcIsContourConvex(
            int[] pointsXy,
            int pointCount,
            out int isConvex);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_is_contour_convex")]
        internal static unsafe extern int ImgProcIsContourConvexPtr(
            int* pointsXy,
            int pointCount,
            out int isConvex);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_convex_hull_count")]
        internal static extern int ImgProcConvexHullCount(
            int[] pointsXy,
            int pointCount,
            int clockwise,
            out int hullPointCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_convex_hull_count")]
        internal static unsafe extern int ImgProcConvexHullCountPtr(
            int* pointsXy,
            int pointCount,
            int clockwise,
            out int hullPointCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_convex_hull_fill")]
        internal static extern int ImgProcConvexHullFill(
            int[] pointsXy,
            int pointCount,
            int clockwise,
            int[] hullPointsXy,
            int hullPointCapacity,
            out int hullPointCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_convex_hull_fill")]
        internal static unsafe extern int ImgProcConvexHullFillPtr(
            int* pointsXy,
            int pointCount,
            int clockwise,
            int* hullPointsXy,
            int hullPointCapacity,
            out int hullPointCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_convex_hull_indices_count")]
        internal static extern int ImgProcConvexHullIndicesCount(
            int[] pointsXy,
            int pointCount,
            int clockwise,
            out int hullIndexCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_convex_hull_indices_count")]
        internal static unsafe extern int ImgProcConvexHullIndicesCountPtr(
            int* pointsXy,
            int pointCount,
            int clockwise,
            out int hullIndexCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_convex_hull_indices_fill")]
        internal static extern int ImgProcConvexHullIndicesFill(
            int[] pointsXy,
            int pointCount,
            int clockwise,
            int[] hullIndices,
            int hullIndexCapacity,
            out int hullIndexCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_convex_hull_indices_fill")]
        internal static unsafe extern int ImgProcConvexHullIndicesFillPtr(
            int* pointsXy,
            int pointCount,
            int clockwise,
            int* hullIndices,
            int hullIndexCapacity,
            out int hullIndexCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_convexity_defects_count")]
        internal static extern int ImgProcConvexityDefectsCount(
            int[] contourXy,
            int contourPointCount,
            int[] hullIndices,
            int hullIndexCount,
            out int defectCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_convexity_defects_fill")]
        internal static extern int ImgProcConvexityDefectsFill(
            int[] contourXy,
            int contourPointCount,
            int[] hullIndices,
            int hullIndexCount,
            int[] defects,
            int defectCapacity,
            out int defectCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_min_enclosing_circle")]
        internal static extern int ImgProcMinEnclosingCircle(
            int[] pointsXy,
            int pointCount,
            out float centerX,
            out float centerY,
            out float radius);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_min_enclosing_circle")]
        internal static unsafe extern int ImgProcMinEnclosingCirclePtr(
            int* pointsXy,
            int pointCount,
            out float centerX,
            out float centerY,
            out float radius);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_point_polygon_test")]
        internal static extern int ImgProcPointPolygonTest(
            int[] contourXy,
            int pointCount,
            float pointX,
            float pointY,
            int measureDist,
            out double result);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_point_polygon_test")]
        internal static unsafe extern int ImgProcPointPolygonTestPtr(
            int* contourXy,
            int pointCount,
            float pointX,
            float pointY,
            int measureDist,
            out double result);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_match_shapes")]
        internal static extern int ImgProcMatchShapes(
            int[] contour1Xy,
            int contour1PointCount,
            int[] contour2Xy,
            int contour2PointCount,
            int method,
            double parameter,
            out double result);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_match_shapes")]
        internal static unsafe extern int ImgProcMatchShapesPtr(
            int* contour1Xy,
            int contour1PointCount,
            int* contour2Xy,
            int contour2PointCount,
            int method,
            double parameter,
            out double result);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_min_area_rect")]
        internal static extern int ImgProcMinAreaRect(
            int[] pointsXy,
            int pointCount,
            out float centerX,
            out float centerY,
            out float width,
            out float height,
            out float angle);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_min_area_rect")]
        internal static unsafe extern int ImgProcMinAreaRectPtr(
            int* pointsXy,
            int pointCount,
            out float centerX,
            out float centerY,
            out float width,
            out float height,
            out float angle);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_box_points")]
        internal static extern int ImgProcBoxPoints(
            float centerX,
            float centerY,
            float width,
            float height,
            float angle,
            float[] pointsXy,
            int pointCapacity);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_fit_ellipse")]
        internal static extern int ImgProcFitEllipse(
            int[] pointsXy,
            int pointCount,
            out float centerX,
            out float centerY,
            out float width,
            out float height,
            out float angle);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_fit_ellipse")]
        internal static unsafe extern int ImgProcFitEllipsePtr(
            int* pointsXy,
            int pointCount,
            out float centerX,
            out float centerY,
            out float width,
            out float height,
            out float angle);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_fit_ellipse_ams")]
        internal static extern int ImgProcFitEllipseAMS(
            int[] pointsXy,
            int pointCount,
            out float centerX,
            out float centerY,
            out float width,
            out float height,
            out float angle);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_fit_ellipse_ams")]
        internal static unsafe extern int ImgProcFitEllipseAMSPtr(
            int* pointsXy,
            int pointCount,
            out float centerX,
            out float centerY,
            out float width,
            out float height,
            out float angle);
